# VoteScout

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: briefing.rs  civic.rs  lang.rs  main.rs  mock.rs  office.rs  photos.rs  plan.rs  pledge.rs
frontend/: e2e-avatar-check.mjs  e2e-empty-check.mjs  e2e-i18n-check.mjs  e2e-map-check.mjs  e2e-map-size.mjs  e2e-office-check.mjs  e2e-overhaul-shots.mjs  e2e-plan-check.mjs  e2e-recheck.mjs  e2e-redesign-shots.mjs  e2e-upgrades-check.mjs  index.html  package-lock.json  package.json  test-plan.ics
frontend/src/: App.css  App.jsx  CandidateAvatar.jsx  ElectionMap.jsx  GromaMark.jsx  MakePlan.jsx  VotingPlan.jsx  i18n.js  tokens.css
frontend/src/locales/: en.json  es.json  vi.json  zh.json
